--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,9 @@
 
 
     <string name="ip_address">IP Address</string>
+    <string name="placeholder_ip_address">Enter IP Address or link</string>
+    <string name="speed_test">Speed Test</string>
+    <string name="content_description_speed_test">Run a speed test</string>
     <string name="your_ip">Your public IP is: %1$s</string>
     <string name="scan">Scan</string>
     <string name="ip_address_result">IP Address: %1$s</string>
